<resources>
    <string name="app_name">Legend Note App</string>
    <string name="my_notes">My Notes</string>
    <string name="search_for_a_note">Search for a note</string>
    <string name="note_title">Note Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="write_a_note">Write a note</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="select_image">Add Image</string>
    <string name="add_url">Add URL</string>
</resources>