<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/miscellaneous_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    app:behavior_peekHeight = "@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/miscellanousTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/miscellaneous"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        />
    <LinearLayout
        android:id="@+id/layout_note_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <View
                android:id="@+id/colorNote1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_1"
            />
            <ImageView
                android:id="@+id/checkboxedInImage1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_badone"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                />

        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <View
                android:id="@+id/colorNote2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2"
                />
            <ImageView
                android:id="@+id/checkboxedInImage2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                />
        </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <View
                    android:id="@+id/colorNote3"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_3"
                    />
                <ImageView
                    android:id="@+id/checkboxedInImage3"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"

                    app:tint="@color/white"
                    android:padding="@dimen/_10sdp"
                    />

        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <View
                android:id="@+id/colorNote4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_4"
                />
            <ImageView
                android:id="@+id/checkboxedInImage4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <View
                android:id="@+id/colorNote5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_5"
                />
            <ImageView
                android:id="@+id/checkboxedInImage5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/colorMiscellaneousTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/pick_color"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/imageLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageViewLinearLayoutInMiscellaneous"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_image"
        android:layout_gravity="center"
        app:tint="@color/colorIcons"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:contentDescription = "@string/app_name" />
        <TextView
            android:id="@+id/textViewImageLinearLayoutInMiscellaneous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/select_image"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_medium"
            />

</LinearLayout>
    <LinearLayout
        android:id="@+id/urlLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/urlimageViewLinearLayoutInMiscellaneous"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_language"
            android:layout_gravity="center"
            app:tint="@color/colorIcons"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription = "@string/app_name" />
        <TextView
            android:id="@+id/urltextViewImageLinearLayoutInMiscellaneous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_url"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_medium"
            />

    </LinearLayout>
</LinearLayout>