<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.CreatNoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_40sdp">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/backArrowIcon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_backarrow"
                app:tint="@color/colorIcons"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                android:id="@+id/checkMarkIcon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_checkmark"
                app:tint="@color/colorIcons"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="TODO" />
            <EditText
                android:id="@+id/editTextNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:background="@null"
                android:imeOptions="actionDone"
                android:paddingStart="@dimen/_5sdp"
                android:importantForAutofill="no"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white"
                android:hint="@string/note_title"
                app:layout_constraintTop_toBottomOf="@id/backArrowIcon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <TextView
                android:id="@+id/textViewTimeDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_10ssp"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle"
                />
            <EditText
                android:id="@+id/subtitleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:paddingStart="@dimen/_5sdp"
                android:background="@null"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:hint="@string/subtitle"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:inputType="textMultiLine"
                android:textColorHint="@color/colorTextHint"
                app:layout_constraintTop_toBottomOf="@+id/textViewTimeDate"
                app:layout_constraintStart_toEndOf="@id/subtitleSelector"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <View
                android:id="@+id/subtitleSelector"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/viewsubtitle"
                app:layout_constraintTop_toTopOf="@id/subtitleEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/subtitleEditText"
                />
            <ImageView
                android:id="@+id/noteEditImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/editTextNoteMain"
                app:layout_constraintTop_toBottomOf="@+id/subtitleEditText"
                />

            <EditText
                android:id="@+id/editTextNoteMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_11ssp"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_goneMarginEnd="@dimen/_12sdp"
                android:gravity="top"
                android:minHeight="@dimen/_100sdp"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/write_a_note"
                android:background="@null"

                app:layout_constraintTop_toBottomOf="@id/noteEditImageView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>