<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.MainActivity">
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_goneMarginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/my_notes"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <LinearLayout
        android:id="@+id/linearLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/backgroundsearch"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        >
        <ImageView
            android:id="@+id/imageViewSearch"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_search"
            app:tint="@color/colorSearchIcon"

            android:contentDescription="@string/app_name" />
        <EditText
            android:id="@+id/editTextSearchID"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/search_for_a_note"
            android:textColorHint="@color/colorTextHint"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottomPanelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionBackground"
        android:paddingStart="@dimen/_10sdp"
        android:orientation="horizontal"
        android:gravity="start"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:id="@+id/imageViewLanguage"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_add"
            app:tint="@color/colorIcons"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/app_name" />
        <ImageView
            android:id="@+id/imageViewImage"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_language"
            app:tint="@color/colorIcons"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/app_name" />
        <ImageView
            android:id="@+id/imageViewAdd"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/app_name" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutSearch"
        app:layout_constraintBottom_toTopOf="@id/bottomPanelLayout"
        />
    <ImageView
        android:id="@+id/addNoteButton"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/buttonaddnote"
        android:layout_marginEnd="@dimen/_20sdp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="@id/bottomPanelLayout"
        app:layout_constraintBottom_toTopOf="@id/bottomPanelLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:tint="@color/colorPrimary" />


</androidx.constraintlayout.widget.ConstraintLayout>